--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
 
     - name: Deploy code to DigitalOcean
       run: |
-        rsync -avz --delete ./ root@170.64.140.205:/home/blog/
+        rsync -avz --delete ./ alei@170.64.140.205:/home/blog/
 
     - name: Restart application with PM2
       run: |
-        ssh root@170.64.140.205 'cd /home/blog && npm install && pm2 stop blog || true && pm2 start npm --name "blog" -- start -- --port 3008 || pm2 restart blog'
+        ssh alei@170.64.140.205 'cd /home/blog && npm install && pm2 stop blog || true && pm2 start npm --name "blog" -- start -- --port 3008 || pm2 restart blog'
