--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,23 +22,24 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
 
-    - name: Set up SSH
+    # 使用官方的SSH Actions来处理SSH连接
+    - name: Install SSH key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        if_key_exists: replace
+
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.DO_HOST }} >> ~/.ssh/known_hosts
+
+    - name: Test SSH connection
       run: |
-        mkdir -p ~/.ssh
-        # 使用DO_SSH_KEY存储SSH私钥
-        echo "${{ secrets.DO_SSH_KEY }}" > ~/.ssh/id_ed25519
-        chmod 600 ~/.ssh/id_ed25519
-        # 使用DO_HOST存储服务器IP地址
-        ssh-keyscan -H ${{ secrets.DO_HOST }} >> ~/.ssh/known_hosts
-        # 添加详细的SSH调试信息
         echo "Testing SSH connection..."
-        ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 root@${{ secrets.DO_HOST }} 'echo "SSH connection successful"'
-      # 添加错误处理
-      continue-on-error: false
+        ssh -o StrictHostKeyChecking=no ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }} 'echo "SSH connection successful"'
 
     - name: Deploy code to DigitalOcean
       run: |
-        if ! rsync -avz ./ root@${{ secrets.DO_HOST }}:/home/blog/; then
+        if ! rsync -avz ./ ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }}:/home/blog/; then
           echo "Failed to deploy code to server"
           exit 1
         fi
@@ -47,7 +48,7 @@ jobs:
 
     - name: Build and restart application
       run: |
-        ssh root@${{ secrets.DO_HOST }} 'cd /home/blog && {
+        ssh ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }} 'cd /home/blog && {
           # 安装依赖
           if ! npm install; then
             echo "Failed to install dependencies"
