--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3011",
+    "dev:custom": "node start-dev.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "dotenv": "^16.5.0",
     "gray-matter": "^4.0.3",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.363.0",
