--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3011",
     "dev:custom": "node start-dev.js",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3011",
     "lint": "next lint"
   },
   "dependencies": {
