--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/typography": "^0.5.16",
     "dotenv": "^16.5.0",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.363.0",
     "mysql2": "^3.14.1",
